fixed word wrap for nvim, added clock and network for waybar, changed defaults for monitor config in hyprland

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -21,6 +21,7 @@ window#waybar {
 #window,
 #clock,
 #battery,
+#network,
 #cpu,
 #memory {
     background: transparent;
